feat(services): support for user services

--- a/home/run_onchange_enable_services.sh.tmpl
+++ b/home/run_onchange_enable_services.sh.tmpl
@@ -1,7 +1,11 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/bash
 
-{{ range .services.linux.enabled -}}
+{{ range .services.linux.system -}}
 sudo systemctl enable --now {{ . }}
+{{ end -}}
+
+{{ range .services.linux.user -}}
+systemctl --user enable --now {{ . }}
 {{ end -}}
 {{ end -}}
